Storage Monitor: Make PortableDeviceWatcherWin use a COM-ready thread

Bug: 749233
Change-Id: If21a37358492d41db11a1557a6f2cf68520226be
Reviewed-on: https://chromium-review.googlesource.com/587423
Reviewed-by: Francois Doray <fdoray@chromium.org>
Commit-Queue: Tommy Li <tommycli@chromium.org>
Cr-Commit-Position: refs/heads/master@{#489961}
Former-commit-id: 8e7b09023501bc23c8c38c09c2b30e23c40f3523